ddimtirov - switched to the foreign memory access preview API for another 10% speedup